src/objects/Center_Budget__c.object
<CustomObject>
    <description>Table to store budgeted metrics for centers. Will be used in reports and analytics</description>
    <fields>
        <fullName>Baseline_Target__c</fullName>
        <description>Used for the new commission program 1/27/2015,  this number indicates the baseline target for the person.  All other tiers are calculated off of it.</description>
        <label>Baseline Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgeted_Close_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected close rate at the center during this fiscal interval</description>
        <label>Budgeted Close Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budgeted_Consults__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of consults expected at the center during this fiscal interval</description>
        <label>Budgeted Consults</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Dollars_In__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of treatment dollars cancelled inside the interval</description>
        <label>Cancelled Dollars In</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Dollars_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of treatment dollars cancelled outside the interval</description>
        <label>Cancelled Dollars Out</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Starts_In__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of starts cancelled during an interval</description>
        <label>Cancelled Starts In</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Starts_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of starts cancelled outside of the interval</description>
        <label>Cancelled Starts Out</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Center the budget numbers are for</description>
        <label>Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Budgets</relationshipLabel>
        <relationshipName>Center_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collected_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of revenue collected during the interval</description>
        <label>Collected Dollars</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of consults seen during an interval</description>
        <label>Consults</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financed_Consults__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of consults applying for financing during the interval</description>
        <label>Financed Consults</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <defaultValue>MONTH(today())</defaultValue>
        <description>Two digit numerical representation of the fiscal month the budget is for</description>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <defaultValue>YEAR(today())</defaultValue>
        <description>Four digit numerical representation of the fiscal year the budgeted number is for</description>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Collected_Fees__c</fullName>
        <description>GP Collection Fees</description>
        <label>GP Collected Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Refund_Fees__c</fullName>
        <description>GP Refund Fees</description>
        <label>GP Refund Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refunded_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of money refunded during the interval</description>
        <label>Refunded Dollars</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly sales Goal Target</description>
        <label>Sales_Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of treatment sold outside of the interval</description>
        <label>Sold</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of starts seen during the interval</description>
        <label>Starts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Snapshot of the sales goal for this interval</description>
        <label>Target Dollars</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Rate__c</fullName>
        <formula>( Collected_Dollars__c - Refunded_Dollars__c) / Target_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_1_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 1 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 2 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 3 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Center Budget</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Center Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Center Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>